[package]
name = "neomind-core"
version.workspace = true
edition.workspace = true

[features]
default = []
wasmi = ["dep:wasmi", "dep:wasmi-validation"]
tiktoken = ["dep:tiktoken-rs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
once_cell = "1.19"
parking_lot = "0.12"
tracing = "0.1"

# Optional WASM runtime
wasmi = { version = "1.0", optional = true }
wasmi-validation = { version = "0.5", optional = true }

# Optional tiktoken for accurate token counting
tiktoken-rs = { version = "0.6", optional = true }

# Extension system
semver = { version = "1", features = ["serde"] }
libloading = "0.8"
neomind-sandbox = { path = "../neomind-sandbox" }

[dev-dependencies]
neomind-automation = { path = "../neomind-automation" }
neomind-agent = { path = "../neomind-agent" }
neomind-tools = { path = "../neomind-tools" }

[lints.clippy]
# Temporarily suppress clippy warnings for neomind-core
# These should be fixed properly, but for now we allow them to pass CI
needless_return = "allow"
too_many_arguments = "allow"
double_ended_iterator_last = "allow"
question_mark = "allow"
if_same_then_else = "allow"
iter_with_drain = "allow"
clone_on_copy = "allow"
derivable_impls = "allow"
