[package]
name = "neomind-core"
version.workspace = true
edition.workspace = true

[features]
default = []
tiktoken = ["dep:tiktoken-rs"]

[dependencies]
# Extension SDK (unified - replaces api and host-api)
neomind-extension-sdk = { path = "../neomind-extension-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
once_cell = "1.19"
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Optional WASM runtime

# Optional tiktoken for accurate token counting
tiktoken-rs = { version = "0.6", optional = true }

# Extension system
semver = { workspace = true }
libloading = "0.8"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
sha2 = { workspace = true }
scopeguard = "1.2"

[lints.clippy]
# Temporarily suppress clippy warnings for neomind-core
# These should be fixed properly, but for now we allow them to pass CI
needless_return = "allow"
too_many_arguments = "allow"
double_ended_iterator_last = "allow"
question_mark = "allow"
if_same_then_else = "allow"
iter_with_drain = "allow"
clone_on_copy = "allow"
derivable_impls = "allow"
collapsible_if = "allow"
map_clone = "allow"
