[package]
name = "neomind-data-push"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
neomind-core = { path = "../neomind-core" }
neomind-storage = { path = "../neomind-storage" }
# Resolve internal /api/images/ URLs to base64 for external delivery
# (webhook/MQTT push targets can't reach the local file route).
neomind-devices = { path = "../neomind-devices" }
base64 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
redb = { workspace = true }
reqwest = { workspace = true }
handlebars = "5"
rumqttc = "0.24"
async-trait = { workspace = true }
