[package]
name = "neomind-devices"
version.workspace = true
edition.workspace = true

[dependencies]
neomind-core = { path = "../neomind-core" }
neomind-storage = { path = "../neomind-storage" }

tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# HTTP Client
reqwest = { version = "0.12", optional = true, features = ["json"] }

# Storage
redb = { workspace = true }

# MQTT
rumqttc = { version = "0.24", optional = true }
rumqttd = { version = "0.19", optional = true }

# Utils
futures = { workspace = true }
async-trait = "0.1"
async-stream = "0.3"
base64 = { workspace = true }
semver = { workspace = true }

[features]
default = ["mqtt", "http"]
mqtt = ["rumqttc"]
http = ["reqwest"]
embedded-broker = ["rumqttd"]
all = ["mqtt", "http", "embedded-broker"]

[dev-dependencies]
base64 = { workspace = true }
