[package]
name = "neomind-devices"
version.workspace = true
edition.workspace = true

[dependencies]
neomind-core = { path = "../neomind-core" }
neomind-storage = { path = "../neomind-storage" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP Client
reqwest = { workspace = true, optional = true }

# Storage
redb = { workspace = true }

# MQTT
rumqttc = { version = "0.24", optional = true, features = ["use-rustls"] }
rumqttd = { version = "0.20", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pki-types = { version = "1", optional = true }
rustls-pemfile = { version = "2", optional = true }
rustls-native-certs = { version = "0.7", optional = true }

# Utils
futures = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
async-channel = { version = "2", optional = true }
base64 = { workspace = true }
semver = { workspace = true }

[features]
default = ["mqtt", "http"]
mqtt = ["rumqttc", "rustls", "rustls-pki-types", "rustls-pemfile", "rustls-native-certs", "async-channel"]
http = ["reqwest"]
embedded-broker = ["rumqttd"]
all = ["mqtt", "http", "embedded-broker"]

[dev-dependencies]
base64 = { workspace = true }

[lints.clippy]
# Temporarily suppress clippy warnings for neomind-devices
redundant_locals = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
result_large_err = "allow"
