[package]
name = "neomind-extension-runner"
version = "0.5.15"
edition = "2021"
description = "Standalone extension process runner for process-isolated extensions"
authors = ["NeoMind Team"]
license = "MIT"

[[bin]]
name = "neomind-extension-runner"
path = "src/main.rs"

[dependencies]
neomind-core = { path = "../neomind-core" }
neomind-extension-sdk = { path = "../neomind-extension-sdk" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"

tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
semver = "1.0"
# WASM runtime (direct dependency)
wasmtime = { version = "26", features = ["async", "component-model"] }
wasmtime-wasi = { version = "26" }
thiserror = "2"
libc = "0.2"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation"] }