[package]
name = "neomind-extension-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified SDK for developing NeoMind extensions (ABI Version 3)"

[lib]
name = "neomind_extension_sdk"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
semver = "1"
async-trait = "0.1"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
neomind-core = { path = "../neomind-core" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
num_cpus = { version = "1", optional = true }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
# Use pollster for WASM-compatible block_on - it's lightweight and works on wasm32-unknown-unknown
pollster = "0.4"

[features]
default = []
native = []
wasm = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
