[package]
name = "neomind-extension-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified SDK for developing NeoMind extensions (ABI Version 3)"

[lib]
name = "neomind_extension_sdk"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
async-trait = { workspace = true }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
neomind-core = { path = "../neomind-core" }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
num_cpus = { version = "1", optional = true }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
# Use pollster for WASM-compatible block_on - it's lightweight and works on wasm32-unknown-unknown
pollster = "0.4"

[features]
default = []
native = []
wasm = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
