[package]
name = "neomind-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
neomind-core = { path = "../neomind-core" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

# HTTP client for embedding APIs
reqwest = { workspace = true }

# LRU cache for embeddings
lru = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
