[package]
name = "neomind-native-capability-smoke-extension"
version.workspace = true
edition.workspace = true

[lib]
name = "neomind_extension_native_capability_smoke"
crate-type = ["cdylib", "rlib"]

[dependencies]
neomind-extension-sdk = { path = "../neomind-extension-sdk" }
async-trait = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true }
