[package]
name = "neomind-rules"
version.workspace = true
edition.workspace = true

[dependencies]
neomind-core = { path = "../neomind-core" }
neomind-devices = { path = "../neomind-devices" }
neomind-messages = { path = "../neomind-messages" }

tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Utils
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
url = "2.5"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Storage
redb = "2.1"

[features]
default = []

[lints.clippy]
# Temporarily suppress clippy warnings for neomind-rules
unnecessary_map_or = "allow"
collapsible_if = "allow"
manual_strip = "allow"
should_implement_trait = "allow"
type_complexity = "allow"
