[package]
name = "neomind-rules"
version.workspace = true
edition.workspace = true

[dependencies]
neomind-core = { path = "../neomind-core" }
neomind-devices = { path = "../neomind-devices" }
neomind-messages = { path = "../neomind-messages" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
url = "2.5"

# HTTP client
reqwest = { workspace = true }

# Storage
redb = { workspace = true }

[features]
default = []

[lints.clippy]
# Temporarily suppress clippy warnings for neomind-rules
unnecessary_map_or = "allow"
collapsible_if = "allow"
manual_strip = "allow"
should_implement_trait = "allow"
type_complexity = "allow"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
