[package]
name = "neomind-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# WASM runtime
wasmtime = { version = "26", features = ["async", "component-model"] }
wasmtime-wasi = { version = "26" }

[features]
default = []
