[package]
name = "neomind-storage"
version.workspace = true
edition.workspace = true

[dependencies]
neomind-core = { path = "../neomind-core" }

tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# New database: redb
redb = { workspace = true }

# LRU cache for hot data
lru = "0.12"

# Concurrent data structures
dashmap = "6"

# Async utilities for parallel operations
futures = "0.3"

# Utils
bincode = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
rand = { workspace = true }

[features]
default = ["redb"]

# Storage backends
redb = []
memory = []

# Settings migration support
settings = []

# All features
all = ["redb", "memory", "settings"]

[lints.clippy]
# Temporarily suppress clippy warnings for neomind-storage
type_complexity = "allow"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
